force-app/main/default/objects/JobPositionAssignment.object
<CustomObject>
    <fields>
        <fullName>Created_From_Sign_Up_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is checked if the volunteer used the Sign Up link to register for their volunteer activity.</inlineHelpText>
        <label>Created From Sign Up Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This is populated to save the information from the Sign Up Guest User flow through Experience Cloud. An automated trigger flow runs on J.P. Assignment to create and or update a Person Account.</description>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>This is populated to save the information from the Sign Up Guest User flow through Experience Cloud. An automated trigger flow runs on J.P. Assignment to create and or update a Person Account.</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>This is populated to save the information from the Sign Up Guest User flow through Experience Cloud. An automated trigger flow runs on J.P. Assignment to create and or update a Person Account.</description>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Quick_Update_Field__c</fullName>
        <inlineHelpText>This field describes the mass quick update action and the fields that will be updated. There is no need to edit this field.</inlineHelpText>
        <label>Mass Quick Update Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Duration__c</fullName>
        <formula>IF(AND(ISBLANK(ScheduledStartTime),ISBLANK(ScheduledEndTime)), 
 AssignedPositionShift.Default_Duration__c  ,
ROUND((ScheduledEndTime-ScheduledStartTime)*24,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is calculated by the J.P. Shift&apos;s Start and End Time, or if there is no J.P. Shift then by the Scheduled End Time or Start Time on this record.</inlineHelpText>
        <label>Scheduled Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_ID__c</fullName>
        <inlineHelpText>This stores the volunteer ID provided by the guest user flow and is used to prevent data duplication.</inlineHelpText>
        <label>Volunteer ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_motivated_you_to_Volunteer__c</fullName>
        <label>What motivated you to Volunteer?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Would_you_recommend__c</fullName>
        <label>Would you recommend this activity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Absent</fullName>
        <active>true</active>
        <description>If the volunteer is marked as Absent then the Actual Duration field must be set to 0 hours.</description>
        <errorConditionFormula>AND( ISPICKVAL(Status, &quot;Absent&quot;), ActualDuration   &lt;&gt;   0)</errorConditionFormula>
        <errorMessage>If the volunteer is marked as Absent then the Actual Duration field must be set to 0 hours.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActualDuration_and_ActualStartTime</fullName>
        <active>true</active>
        <description>Checks to be sure that Actual Start Time and Actual Duration are filled in when Status is set to Complete.</description>
        <errorConditionFormula>AND(ISPICKVAL(Status,&apos;Complete&apos;),
OR(isblank( ActualStartTime ),isblank( ActualDuration ))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>The record cannot be marked as completed without Actual Duration and Actual Start Time fields completed.</errorMessage>
    </validationRules>
</CustomObject>